# mtukai

./: LICENSE  LICENSE-APACHE  README.md
esp-rs-copro/: Cargo.toml
esp-rs-copro-procmacro/: Cargo.toml
esp-rs-copro-procmacro/src/: lib.rs
esp-rs-copro/.cargo/: config.toml
esp-rs-copro/src/: addresstranslation.rs  constants.rs  lib.rs  lpadapter.rs  lpalloc.rs  lpbox.rs  movableobject.rs  movableobjectwrapper.rs  prelude.rs
esp-rs-copro/src/collections/: lpdrain.rs.unused  lpsplice.rs.unused  lpvec.rs  lpveccopy.rs  mod.rs
esp-rs-copro/src/io/: gpio.rs  i2c.rs  mod.rs
esp-rs-copro/tests/: lpbox.rs  vec.rs
examples/list_sum/: README.md
examples/list_sum/lp/: Cargo.toml  README.md  build.rs
examples/list_sum/lp/.cargo/: config.toml
examples/list_sum/lp/ld/: link-ulp.x
examples/list_sum/lp/src/: main.rs
examples/list_sum/main/: Cargo.toml
examples/list_sum/main/.cargo/: config.toml
examples/list_sum/shared/: Cargo.toml
examples/list_sum/shared/src/: lib.rs
examples/music/: README.md
examples/music/lp/: Cargo.toml  build.rs
examples/music/lp/.cargo/: config.toml
examples/music/lp/ld/: link-lp.x
examples/music/lp/src/: main.rs
examples/music/main/: Cargo.toml  build.rs
examples/music/main/.cargo/: config.toml
examples/music/shared/: Cargo.toml
examples/music/shared/src/: lib.rs
examples/pedometer/: README.md
examples/pedometer/lp/: Cargo.toml  build.rs
examples/pedometer/lp/.cargo/: config.toml
examples/pedometer/lp/src/: main.rs
examples/pedometer/main/: Cargo.toml
examples/pedometer/main/.cargo/: config.toml
examples/pedometer/shared/: Cargo.toml
examples/pedometer/shared/src/: lib.rs
examples/temp_sensor/: README.md
examples/temp_sensor/lp/: Cargo.toml  README.md
examples/temp_sensor/lp/src/: main.rs
examples/temp_sensor/main/: Cargo.toml
examples/temp_sensor/shared/: Cargo.toml
examples/temp_sensor/shared/src/: lib.rs
lp/: Cargo.toml  build.rs
lp/src/: alloc.rs  lpalloc.rs  lpbox.rs  main.rs
main/: Cargo.toml
shared/: Cargo.toml
shared/src/: lib.rs
