[package]
name = "esp-rs-copro-procmacro"
version = "0.1.0"
edition = "2024"
license = "Apache-2.0 OR MIT"

[lib]
proc-macro = true

[package.metadata.docs.rs]
features = ["is-lp-core", "has-lp-core", "esp32c6"]

[dependencies]
document-features = "0.2"
object            = { version = "0.37", default-features = false, features = ["read_core", "elf"]}#, optional = true }
proc-macro-crate  = "3.4"
proc-macro2       = "1.0"
quote             = "1.0"
syn               = { version = "2.0", features = ["extra-traits", "full"] }
termcolor         = "1.4"

[features]
#! ### Low-power Core Feature Flags
## Indicate that the SoC contains an LP core.
has-lp-core = []#["dep:object"]
## Provide an `#[entry]` macro for running applications on the LP/ULP core.
is-lp-core = []
## This feature must be enabled when has-lp-core is enabled for ESP32-C6 project.
esp32c6 = []
## This feature must be enabled when has-lp-core is enabled for ESP32-S2 project.
esp32s2 = []
## This feature must be enabled when has-lp-core is enabled for ESP32-S3 project.
esp32s3 = []
