[package]
name = "esp-rs-copro"
version = "0.1.0"
edition = "2024"
license = "Apache-2.0 OR MIT"

[profile.release]
panic = 'abort'

[package.metadata.docs.rs]
features = ["is-lp-core", "has-lp-core", "esp32c6", "esp32s3"]

[dependencies]
esp-println = { version = "0.16.1", features = ["log-04"], optional = true }
esp-lp-hal  = { version = "0.3.0", features = [], optional = true}
esp-hal     = { version = "=1.0.0", features = ["unstable", "log-04"], optional = true }

[dev-dependencies]
esp-rs-copro-procmacro = { path = "../esp-rs-copro-procmacro", features=["has-lp-core"] }
rand = "0.10.0"

[features]
default = []
nottest = []
unsafe-vtable = []
is-lp-core = ["dep:esp-lp-hal", "nottest"]
has-lp-core = ["dep:esp-println", "dep:esp-hal", "nottest"]
esp32c6 = ["esp-lp-hal?/esp32c6", "esp-hal?/esp32c6", "esp-println?/esp32c6"]
esp32s3 = ["esp-lp-hal?/esp32s3", "esp-hal?/esp32s3", "esp-println?/esp32s3"]
custom_range = []
