[package]
edition      = "2021"
name         = "esp-rs-copro"
rust-version = "1.86"
version      = "0.1.0"

[[bin]]
name = "esp-rs-copro"
path = "./src/bin/main.rs"

[dependencies]
esp-println = { version="0.15.0", features = ["log-04"] }
esp-backtrace = { version="0.17.0", features = [
    "esp32c6",
    "panic-handler",
    "println",
] }
esp-bootloader-esp-idf = { version = "0.2.0", features = ["esp32c6"] }
esp-hal                = { version = "=1.0.0-rc.0", features = ["esp32c6", "unstable", "log-04"] }

critical-section = "1.2.0"


[profile.dev]
# Rust debug is too slow.
# For debug builds always builds with some optimization
opt-level = "s"

[profile.release]
codegen-units    = 1     # LLVM can perform better optimizations using a single thread
debug            = 2
debug-assertions = false
incremental      = false
lto              = 'fat'
opt-level        = 's'
overflow-checks  = false
