[package]
edition      = "2024"
name         = "temp-sensor-main"
version      = "0.1.0"

[[bin]]
name = "temp-sensor-main"
path = "./src/bin/main.rs"

[dependencies]
esp-println = { version="0.16.1", features = ["log-04"] }
esp-backtrace = { version="0.18.1", features = [
    "esp32c6",
    "panic-handler",
    "println",
] }
esp-bootloader-esp-idf = { version = "0.4.0", features = ["esp32c6"] }
esp-hal                = { version = "=1.0.0", features = ["esp32c6", "unstable", "log-04"] }
esp-rs-copro           = { path = "../../../esp-rs-copro", features = ["has-lp-core", "esp32c6"] }
esp-rs-copro-procmacro = { path = "../../../esp-rs-copro-procmacro" , features = ["has-lp-core"] }

critical-section = "1.2.0"
esp-alloc = { version = "0.9.0", features = ["esp32c6"] }

temp-sensor-shared = { path = "../shared" }

[profile.dev]
# Rust debug is too slow.
# For debug builds always builds with some optimization
opt-level = "s"

[profile.release]
codegen-units    = 1     # LLVM can perform better optimizations using a single thread
debug            = 2
debug-assertions = false
incremental      = false
lto              = 'fat'
opt-level        = 's'
overflow-checks  = false
